iptables.txt
*filter

### цепочка для адресов, которым разрешено все (все порты)
-N ALL_PORTS
-A ALL_PORTS -p tcp -j LOG -m limit --limit 2/min --log-prefix "Iptables: ALL_PORTS: " 
-A ALL_PORTS -p udp -j LOG -m limit --limit 2/min --log-prefix "Iptables: ALL_PORTS: " 
-A ALL_PORTS -p tcp -j ACCEPT
-A ALL_PORTS -p udp -j ACCEPT
-A ALL_PORTS -j DROP

### цепочка для адресов серверов баз данных и контейнеров с приложением, которым разрешено все
-N APP_DB
-A APP_DB -j LOG -m limit --limit 2/min --log-prefix "Iptables: APP_DB: "
-A APP_DB -j ACCEPT
-A APP_DB -j DROP

### цепочка, в которую будут заноситься адреса пользователей, которым нужен доступ по требованию. Им также разрешено все
-N USERS
-A USERS -j LOG -m limit --limit 2/min --log-prefix "Iptables: USERS: "
-A USERS -j ACCEPT
-A USERS -j DROP

### цепочка, в которую будут заноситься адреса пользователей с временным доступом, им разрешены только определенные порты
-N LIMIT_PORT_USERS
-A LIMIT_PORT_USERS -p tcp --match multiport --dports 22,80,443 -j LOG -m limit --limit 2/min --log-prefix "Iptables: LIMIT_PORT_USERS: "
-A LIMIT_PORT_USERS -p tcp --match multiport --dports 22,80,443 -j ACCEPT
-A LIMIT_PORT_USERS -j DROP

### цепочка, в которую заносятся порты, смотрящие в мир
-N OUTPUT_PORTS
-A OUTPUT_PORTS -p tcp --match multiport --dports 22,80,443 -j LOG --log-prefix "Iptables: OUTPUT_PORTS: "
-A OUTPUT_PORTS -p udp --dport 53 -j LOG --log-prefix "Iptables: OUTPUT_PORTS: "
-A OUTPUT_PORTS -p tcp --match multiport --dports 22,80,443 -j ACCEPT
-A OUTPUT_PORTS -p udp --dport 53 -j ACCEPT
-A OUTPUT_PORTS -j DROP

## INPUT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.64.14 -j ALL_PORTS -m comment --comment "VASYA_ADMIN"
-A INPUT -s 10.10.231.54 -j ALL_PORTS -m comment --comment "PETYA_ADMIN"
-A INPUT -s 172.16.0.0/24 -j ALL_PORTS -m comment --comment "VPN_ADMINS"
-A INPUT -s 192.168.64.15 -j APP_DB -m comment --comment "APP_1"
-A INPUT -s 10.10.6.5 -j APP_DB -m comment --comment "DB_1"
-A INPUT -s 192.168.64.16 -j USERS -m comment --comment "USER_1"
-A INPUT -j LIMIT_PORT_USERS -s 192.168.64.17 -m comment --comment "LIMIT_USER_1"
-A INPUT -j LOG -m limit --limit 2/min --log-prefix "Iptables: DROP_ALL: "
-A INPUT -j DROP

###FORWARD
-A FORWARD -j DROP

### OUTPUT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -j OUTPUT_PORTS
-A OUTPUT -j DROP

#Применяем изменения
COMMIT
